This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
10/17/19: Added beam shift boundaries for JEOL and help section on alpha/beam
shift issues.

10/17/19: Added script commands for getting high voltage and putting up
a message box with just an OK button.

10/17/19: Added support for taking frames from Tietz CMOS cameras.

10/17/19: SEM_3-7-10
10/15/19: Fixed enabling of beam/stage spinners in scope control panel when
there are no beam calibrations (In 3.7).

10/15/19: Changed FEI scope plugin/server to connect to latest version and
hopefully versions after that (In 3.7).

9/30/19: Set spot size after mag change on JEOL when entering or leaving LM;
set alpha before entering LM if no current area defined to avoid setting bad
beam shift/tilt (In 3.7).

9/30/19: Disabled option to limit absolute focus in tilt series when the
limits have not been defined yet (In 3.7).

9/26/19: Turned off Low Dose checkbox when in low dose, realigning to non-low
dose map, and not restoring state after the realign to item (In 3.7).

9/24/19: Added property to use condenser lens normalization instead of passing
through View intensity/spot size when changing low dose area.

9/24/19: SEM_3-7-9
9/24/19: Fixed copying of low dose areas to handle shift and defocus offsets
properly for View and Search, and to not copy additional beam shift/tilt to
Record (In 3.7).

9/24/19: Fixed area measurement that make "Add grid like last" to fill largest
instead of smallest polygon/map that point is in (in 3.7).

9/23/19: 3-8-0beta5
9/18/17: Enabled saving or aligning frames in the SEMCCD plugin for OneView
and Rio cameras, just as for K2/K3, and add general framework from
saving/aligning frames in SerialEM for other cameras.

9/18/17: Added DoLoop command with index variable and start, end, and
increment values.