@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+10/20/19: Allowed ISF to be used for IS in HR mode on Hitachi (In 3.7).
+
 10/17/19: Added beam shift boundaries for JEOL and help section on alpha/beam
 shift issues.
 
